Fix ui bug where high length device would create gap below of form

--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -190,6 +190,7 @@ main > .toggle-mobile {
 
   main .form-wrapper {
     position: static;
+    height: auto;
   }
 
   .form-wrapper .drawer-btn {
